--- a/Modul-1/PRAK103.html
+++ b/Modul-1/PRAK103.html
@@ -12,6 +12,6 @@
     <center>
     <p>Terdapat paragraf disini</p>
     </center>
-    <!-- — Ini adalah komentar yang tidak akan ditampilkan di layar browser -->
+    <!-- Ini adalah komentar yang tidak akan ditampilkan di layar browser -->
 </body>
 </html>
