--- a/Modul-1/PRAK106.html
+++ b/Modul-1/PRAK106.html
@@ -14,8 +14,10 @@
     Ini adalah contoh quotation panjang:
     <blockquote>
     Ini adalah quotation panjang. Ini adalah quotation panjang. Ini adalah quotation panjang. Ini adalah quotation panjang. Ini adalah quotation panjang.
-    <blockquote>
+    </blockquote>
     Ini adalah contoh quotation pendek.
+    <q>
+    Ini adalah quotation pendek
     </q>
     <p>
     Menggunakan elemen blockquote, browser menyisipkan line break dan margin, tetapi elemen q tidak akan menampilkan apapun yang khusus.
