--- a/Modul-1/PRAK101.html
+++ b/Modul-1/PRAK101.html
@@ -14,8 +14,7 @@
         Sedangkan yang ini memiliki             spasi panjang
     </p>
     <p align="center">
-        Jumlah baris dalam setiap paragraf tergantung pada ukuran window browser An
-da. Bila Anda mengubah ukuran window browser, jumlah baris dalam paragraf akan berubah.
+        Jumlah baris dalam setiap paragraf tergantung pada ukuran window browser Anda. Bila Anda mengubah ukuran window browser, jumlah baris dalam paragraf akan berubah.
     </p>
     <p align="right">
         Untuk memotong <br>baris<br>dalam sebuah<br>paragraf,<br>gunakan tag br.
