--- a/Modul-2/PRAK201.html
+++ b/Modul-2/PRAK201.html
@@ -17,28 +17,28 @@
             <h1>Ini adalah contoh Link Relatif</h1>
             <p>
                 Klik <a href="PRAK202.html">di sini</a>
-		Jika Anda akan menuju halaman berikutnya
+		Jika Anda akan menuju halaman berikutnya.
             </p>
         </a>
         <br><br>
         <a name="Link Absolut">
             <h1>Ini adalah contoh Link Absolut</h1>
             <p>
-                Buka <a href="http://www.google.com">www.google.com</a> untuk pencarian yang Anda inginkan
+                Buka <a href="http://www.google.com">www.google.com</a> untuk pencarian yang Anda inginkan.
             </p>
         </a>
         <br><br>
         <a name="Link with New Window">
             <h1>Ini adalah contoh Link dengan Window Baru</h1>
             <p>
-                Buka <a href="http://www.google.com" target="_blank">www.google.com</a> di halaman baru
+                Buka <a href="http://www.google.com" target="_blank">www.google.com</a> di halaman baru.
             </p>
         </a>
         <br><br>
         <a name="Link Ke Email">
             <h1>Ini adalah contoh Link ke email</h1>
             <p>
-                Anda Bisa Menghubungi saya di <a href="mailto:nurul.mustaimin@ulm.ac.id">E-mail ini</a> untuk pertanyaan lebih lanjut
+                Anda Bisa Menghubungi saya di <a href="mailto:nurul.mustamin@ulm.ac.id">E-mail ini</a> untuk pertanyaan lebih lanjut.
             </p>
         </a>
         <br>
