--- a/Modul-2/PRAK201.html
+++ b/Modul-2/PRAK201.html
@@ -8,7 +8,7 @@
     <body>
         <a name="TOP">
             <a href="#Link Relatif">Link Relatif</a><br>
-            <a href="#Link Absolut">Link Relatif</a><br>
+            <a href="#Link Absolut">Link Absolut</a><br>
             <a href="#Link with New Window">Link with New Window</a><br>
             <a href="#Link Ke Email">Link ke E-mail</a><br>
         </a>
