--- a/Modul-2/PRAK206.html
+++ b/Modul-2/PRAK206.html
@@ -6,7 +6,7 @@
         <font face="tahoma" size="2" color="blue">
         <table border="0.8">
             <caption align="top"> <b><u>Daftar Alamat</u></b> </caption>
-            <tr bgcolor="yellow" align="center">
+            <tr bgcolor="blue" align="center">
                 <td width="40"> No. </td>
                 <td width="150"> Nama </td>
                 <td width="200"> Alamat </td>
