Fixed some issues

--- a/Modul-3/PRAK306.html
+++ b/Modul-3/PRAK306.html
@@ -5,7 +5,6 @@
     <body>
         Deskripsi Diri:
         <br>
-        <textarea name="deskripsi" cols="45" rows="5" align="center">Tuliskan deskripsi singkat tentang anda.
-        </textarea>
+        <textarea name="deskripsi" cols="45" rows="5" align="center">Tuliskan deskripsi singkat tentang anda.</textarea>
     </body>
 </html>
