--- a/Modul-1/PRAK110.html
+++ b/Modul-1/PRAK110.html
@@ -5,7 +5,7 @@
 <body>
     <h4>Sebuah list bersarang:</h4>
     <ul>
-        <li>Koi</li>
+        <li>Kopi</li>
         <li>Teh
             <ul>
                 <li>Teh Hitam</li>
